# snapcall

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
apps/web/: AGENTS.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/web/src/: AGENTS.md  App.tsx  index.css  main.tsx  reducer.ts  types.ts
apps/web/src/components/: BoardInput.tsx  BoardSection.tsx  BottomSheet.tsx  CardPicker.tsx  HeaderMenu.tsx  HelpPage.tsx  HeroSection.tsx  MiniCardPicker.tsx  NumberEditor.tsx  PotOddsSection.tsx  RangePicker.tsx  SettingsPage.tsx  VillainRow.tsx  VillainsSection.tsx
apps/web/src/hooks/: useEquity.ts  usePersistedReducer.ts  useSettings.ts  useTheme.ts
apps/web/src/lib/: equity.worker.ts  poker.ts  potOdds.ts  wasm.ts
bindings/: AGENTS.md
bindings/uniffi/: Cargo.toml
bindings/uniffi/src/: lib.rs
bindings/wasm/: Cargo.toml
bindings/wasm/src/: lib.rs
cli/: AGENTS.md  Cargo.toml
cli/src/: main.rs
core/: AGENTS.md  Cargo.toml
core/src/: combinatorics.rs  enumeration.rs  equity.rs  estimate.rs  ffi.rs  input.rs  lib.rs  monte_carlo.rs  parsing.rs  tests.rs  types.rs
docs/: AGENTS.md  INITIAL_AGENTS.md  ROADMAP.md  WEB_V2_PLAN.md  equity-algorithm.md  improvement-plan.md  prd-mobile.md  web-ui-design.md
web/: .gitignore  Cargo.toml  Makefile  app.js  index.html  package.json  pnpm-lock.yaml  style.css  tailwind.config.ts  tsconfig.json  tsconfig.node.json
web/src/: App.tsx  index.css  lib.rs  types.ts
web/src/components/: CardSlot.tsx  CommunityCards.tsx  EquityBar.tsx  PlayerCard.tsx  PlayerList.tsx  PotOddsPanel.tsx  RangeMatrixKeyboard.tsx  TwoTapKeyboard.tsx
web/src/hooks/: useEquity.ts  useWasm.ts
web/src/lib/: utils.ts  wasm.ts
web/src/stores/: gameStore.ts
