[workspace]
members = ["core", "cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SnapCall Team"]
license = "MIT"
repository = "https://github.com/yourusername/snapcall"

[workspace.dependencies]
rs_poker = { version = "4.1", default-features = false, features = ["serde"] }
rand = "0.8"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
