[workspace]
members = ["core", "cli", "web"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SnapCall Team"]
license = "MIT"
repository = "https://github.com/yourusername/snapcall"

[workspace.dependencies]
rs_poker = { version = "4.1.0", default-features = false, features = ["serde"] }
rand = "0.9.2"
clap = { version = "4.5.60", features = ["derive"] }
wasm-bindgen = "0.2.113"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
