[workspace]
members = ["core", "cli", "bindings/uniffi", "bindings/wasm"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SnapCall Team"]
license = "MIT"
repository = "https://github.com/yourusername/snapcall"

[workspace.dependencies]
rs_poker = { version = "4.1.0", default-features = false }
