[package]
name = "snapcall-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for SnapCall poker equity calculator"

[[bin]]
name = "snapcall"
path = "src/main.rs"

[dependencies]
snapcall-core = { path = "../core" }
clap = { workspace = true }
rand = { workspace = true }
rs_poker = { workspace = true }
