[package]
name = "snapcall-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for SnapCall poker equity calculator"

[[bin]]
name = "snapcall"
path = "src/main.rs"

[dependencies]
snapcall-core = { path = "../core" }
clap = { version = "4.5.60", features = ["derive"] }
rs_poker = { workspace = true }
