[package]
name = "snapcall-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "High-performance Texas Hold'em equity calculator core"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
ffi = ["uniffi"]  # Enable FFI bindings generation

[dependencies]
rand = "0.10.0"
rs_poker = { version = "4.1.0", default-features = false, features = ["serde"] }
uniffi = { version = "0.31.0", optional = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[build-dependencies]
uniffi = { version = "0.31.0", features = ["build"] }
