[package]
name = "snapcall-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "High-performance Texas Hold'em equity calculator core"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.10.0"
rs_poker = { version = "4.1.0", default-features = false, features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
