[package]
name = "snapcall-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "High-performance Texas Hold'em equity calculator core"

[lib]
crate-type = ["rlib"]

[dependencies]
rand = "0.10.0"
rs_poker = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
