[package]
name = "snapcall-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

description = "SnapCall Web (WASM) bindings"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { workspace = true }

# Local core engine
snapcall-core = { path = "../core" }

getrandom = { workspace = true }
getrandom_04 = { workspace = true }
