[package]
name = "snapcall-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

description = "SnapCall Web (WASM) bindings"

[lib]
crate-type = ["cdylib"]

[dependencies]
snapcall-core = { path = "../core" }
getrandom = { package="getrandom", version = "0.4.1", features = ["wasm_js"] }
getrandom_03 = { package="getrandom", version = "0.3.4", features = ["wasm_js"] }
wasm-bindgen = "0.2.113"
